# velo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  velo.yaml
.cargo/: config.toml
scripts/: lint.sh  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  commands.rs  lib.rs  main.rs
ui/: biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
ui/src/: command-bar.ts  conversation.ts  dashboard.ts  main.ts  modal.ts  orb.ts  suggestion-bar.ts  types.ts
ui/src/styles/: command-bar.css  conversation.css  dashboard.css  main.css  modal.css  orb.css
velo-agent/: Cargo.toml
velo-agent/src/: lib.rs  main.rs
velo-core/: Cargo.toml
velo-core/src/: agent.rs  builder.rs  config.rs  error.rs  events.rs  handle.rs  hooks.rs  lib.rs
velo-core/src/audio/: capture.rs  mod.rs  resample.rs  stt.rs
velo-core/src/mcp/: client.rs  config.rs  mod.rs  protocol.rs  registry.rs  security.rs  transport.rs  types.rs
velo-core/src/memory/: actor.rs  embeddings.rs  error.rs  mod.rs  relational.rs  session.rs  vector.rs
velo-core/src/sandbox/: engine.rs  env.rs  fs.rs  mod.rs  process.rs
velo-core/src/skills/: bootstrap.rs  manager.rs  mod.rs  trait_def.rs
velo-core/src/skills/builtin/: mod.rs  workspace_mapper.rs
velo-core/src/snapshot/: manager.rs  mod.rs
velo-core/src/sub_agent/: media_analysis.rs  mod.rs
velo-core/src/tools/: mod.rs  output.rs  registry.rs  risk.rs  tool_hooks.rs  types.rs  wasm.rs
velo-core/src/tools/browser/: mod.rs
velo-core/src/tools/crypto/: mod.rs
velo-core/src/tools/files/: compress.rs  files.rs  mod.rs
velo-core/src/tools/input/: clipboard.rs  mod.rs  mouse.rs  screen.rs
velo-core/src/tools/media/: gui_engine.rs  image_info.rs  mod.rs
velo-core/src/tools/network/: mod.rs
velo-core/src/tools/os/: datetime.rs  env_var.rs  mod.rs  notify.rs  notify_user.rs  process.rs  ripgrep.rs  shell.rs  sysinfo.rs  task.rs  window.rs
