[workspace]
members = [
    "velo-core",
    "velo-agent",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["Shesher Hasan <shesher0llms@gmail.com>"]
license      = "MIT"
homepage     = "https://shesher.qzz.io"
repository   = "https://github.com/myth-tools/velo"
description  = "An autonomous desktop agent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "sync", "process"] }

# AI — LiquidOS AutoAgents framework (replaces custom ReAct loop + NIM client)
autoagents        = { version = "0.3", features = ["openai"] }
autoagents-derive = { version = "0.3" }

# HTTP
reqwest        = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util   = { version = "0.3" }
tokio-stream   = { version = "0.1", features = ["sync"] }

# Serialization
serde          = { version = "1",    features = ["derive"] }
serde_json     = { version = "1" }

# Error handling
thiserror      = { version = "1" }
anyhow         = { version = "1" }

# Logging / tracing
tracing        = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "registry"] }

# Config
serde_yaml     = { version = "0.9" }

# Audio
cpal           = { version = "0.15" }
rubato         = { version = "0.15" }


# Screen capture
xcap           = { version = "0.3" }

# Image processing
image          = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }


# Async trait
async-trait    = { version = "0.1" }

# Clipboard
arboard        = { version = "3" }

# Browser automation
chromiumoxide  = { version = "0.9", default-features = false, features = [] }

# OS Automation (Cross-platform)
enigo          = { version = "0.3" }

# WASM sandbox
wasmtime       = { version = "22", features = ["cranelift", "parallel-compilation"] }

# Crypto / hashing
sha2           = { version = "0.10" }
sha-1          = { version = "0.10" }
md-5           = { version = "0.10" }
hmac           = { version = "0.12" }
hex            = { version = "0.4" }
notify-rust    = { version = "4" }
zip            = { version = "2", default-features = false, features = ["deflate", "time"] }

# Utilities
uuid           = { version = "1",    features = ["v4"] }
chrono         = { version = "0.4",  features = ["serde"] }
base64         = { version = "0.22" }
crossbeam-channel = { version = "0.5" }
regex          = { version = "1" }
walkdir        = { version = "2" }

# ── Memory System ──────────────────────────────────────────────────────────────
ractor         = { version = "0.15", features = ["async-trait"] }
sqlx           = { version = "0.8",  features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
lancedb        = { version = "0.31" }
arrow          = { version = "58",   features = ["prettyprint"] }
arrow-schema   = { version = "58" }
arrow-array    = { version = "58" }
tokio-util     = { version = "0.7" }

# System Monitoring
sysinfo        = { version = "0.30" }

# File Watching
notify         = { version = "6.1" }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }


[profile.dev]
debug = 1            # Great choice! Saves massive disk space
incremental = true
opt-level = 0       # explicit
split-debuginfo = "unpacked"  # faster linking on Linux

[profile.release]
opt-level = 3
lto = "thin"         # "thin" is the best balance of speed and binary optimization
codegen-units = 16   # Fast parallel compilation for release
panic = "abort"      
strip = true         
debug = false
