[package]
name    = "velo-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "velo_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
velo-core  = { path = "../velo-core" }
velo-agent = { path = "../velo-agent" }

tauri      = { version = "2", features = ["tray-icon"] }
serde.workspace       = true
serde_json.workspace  = true
tokio.workspace       = true
tracing.workspace     = true
uuid.workspace        = true
crossbeam-channel.workspace = true
futures-util.workspace  = true

