[package]
name    = "velo-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Async
tokio.workspace          = true
tokio-stream.workspace   = true
futures-util.workspace   = true
tokio-util.workspace     = true

# AI — LiquidOS AutoAgents framework
autoagents.workspace        = true
autoagents-derive.workspace = true

# HTTP
reqwest.workspace        = true

# Serialization
serde.workspace          = true
serde_json.workspace     = true

# Errors
thiserror.workspace      = true
anyhow.workspace         = true

# Logging
tracing.workspace        = true
tracing-subscriber.workspace = true

# Config
serde_yaml.workspace     = true

# Audio
cpal.workspace           = true
rubato.workspace         = true


# Screen capture
xcap.workspace           = true
image.workspace          = true

# Async trait
async-trait.workspace    = true

# Clipboard
arboard.workspace        = true

# Browser
chromiumoxide.workspace  = true

# OS Automation
enigo.workspace          = true

# WASM sandbox
wasmtime.workspace       = true

# Hashing
sha2.workspace           = true
sha-1.workspace          = true
md-5.workspace           = true
hmac.workspace           = true
hex.workspace            = true
notify-rust.workspace    = true
zip.workspace            = true

# Utilities
uuid.workspace           = true
chrono.workspace         = true
base64.workspace         = true
regex.workspace          = true
walkdir.workspace        = true
crossbeam-channel.workspace = true

# System Monitoring
sysinfo.workspace        = true

# File Watching
notify.workspace         = true

# WebSocket
tokio-tungstenite.workspace = true

# ── Memory System ──────────────────────────────────────────────────────────────
ractor.workspace         = true
sqlx.workspace           = true
lancedb.workspace        = true
arrow.workspace          = true
arrow-schema.workspace   = true
arrow-array.workspace    = true



[features]
default = []
